kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finki-totp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: finki-totp.com
      http:
        paths:
        - backend:
            service:
              name: backend
              port:
                number: 7777
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: frontend
              port:
                number: 5555
          path: /
          pathType: Prefix
    - host: finki-totp.ddns.net
      http:
        paths:
        - backend:
            service:
              name: backend
              port:
                number: 7777
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: frontend
              port:
                number: 5555
          path: /
          pathType: Prefix
